NXP-17770: Java 9 compatibility