@@ -49,10 +49,8 @@ public class NuxeoTomcatLauncher extends NuxeoLauncher {
         ArrayList<String> serverProperties = new ArrayList<>();
         serverProperties.add("-Djava.util.logging.manager=" + "org.apache.juli.ClassLoaderLogManager");
         File home = configurationGenerator.getNuxeoHome();
-        File endorsed = new File(home, "endorsed");
         serverProperties.add("-Dcatalina.base=" + home.getPath());
         serverProperties.add("-Dcatalina.home=" + home.getPath());
-        serverProperties.add("-Djava.endorsed.dirs=" + endorsed.getPath());
         return serverProperties;
     }
 
